@@ -1000,3 +1000,8 @@ or 'False')
 + Restore job submit failure hook activation, broken in 4.5.1.
 
 + Runahead limit is now displayed in the gcontrol status bar.
+
++ Restore gcontrol graph-view "cycle time focus" functionality;
+accidentally broken between 4.2.2 and 4.5.1.
+
+
